# Copyright (c) 2016-2017, NVIDIA CORPORATION.  All rights reserved.

#-------------------------------------------------------------------------------
# Samples
#-------------------------------------------------------------------------------
add_subdirectory(common)
add_subdirectory(drivenet)
add_subdirectory(drivenet_multiGPU)
add_subdirectory(drivenet_ncameras)
